fixes on links and remove logs.

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,7 +11,7 @@
     </div>
     <input type="checkbox" id="nav-trigger">
     <nav>
-        <a class="link" href="/#presention">Présentation</a>
+        <a class="link" href="/#presentation">Présentation</a>
         <a class="link" href="/#thematiques">Thématiques</a>
         <a class="link" href="/#quisommesnous">Qui sommes nous ?</a>
         <a class="link" href="/#participer">Participer</a>
