--- a/src/global.scss
+++ b/src/global.scss
@@ -73,7 +73,10 @@ a.link {
   text-decoration: none;
   color: $textColor;
   text-align: center;
+  transition: all .3s;
 }
+
+
 
 /**
  * Nav Header
@@ -114,10 +117,8 @@ a.link {
   }
   .nav-open {
     font-size: 1.2rem;
-
     color: $textColor;
-    background-color: #000;
-
+    background-color: $BgColor;
     padding: 0.5rem;
     border-radius: 4px;
 
@@ -145,7 +146,7 @@ a.link {
 
   nav a {
     padding: 15px;
-    font-size: 1rem;
+    font-size: 1.1rem;
     color: $BgColorDark;
     &:hover {
       background-color: $BgColor;
@@ -154,12 +155,13 @@ a.link {
     @media (max-width: $tablet - 1) {
       display: block;
       text-align: center;
+      font-size: .8rem;    
     }
   }
   @media (max-width: $tablet - 1) {
     flex-direction: column-reverse;
     z-index: 9999;
-    box-shadow: 0 -2px 15px black;
+    box-shadow: 0 0px 5px #333;
     .nav-bar {
       padding: 10px
     }
@@ -189,14 +191,14 @@ a.link {
     h1 {
       text-transform: uppercase;
     }
-    @media (max-width: $tablet) {
+    @media (max-width: $tablet - 1) {
       padding: 2rem 0 1.2rem 0;
     }
   }
   h1 {
-    @include title($BgColor, 4rem);
+    @include title($BgColor, 3rem);
     margin-bottom: 2rem;
-    @media (max-width: $tablet) {
+    @media (max-width: $tablet - 1) {
       margin: 2rem;
     }
   }
@@ -214,7 +216,7 @@ a.link {
     @media (min-width: $oldScreen) {
       line-height: 2rem;
       font-weight: 500;
-      font-size: 1.2rem;
+      font-size: 1.4rem;
     }
   }
   & .presentation-info {
@@ -224,13 +226,39 @@ a.link {
     padding: 3rem 0;
     margin-bottom: 0;
 
+    .date p{
+      color: $BgColor;
+      font-size: 1.4rem;  
+       
+      @media (max-width: $tablet - 1) {
+        font-size: .8rem;    
+      }    
+    }  
+      
     img {
       width: 60px;
-    }
-    @media (max-width: $tablet) {
+    }  
+    @media (max-width: $tablet - 1) {
       padding: 1rem 3rem 2rem 3rem;
+      width: 90%;
+      font-size: .7rem;  
+        
     }
+    @media (max-width: $phone - 1) {
+      flex-direction: column;  
+      align-self: center;  
+      align-items: start;  
+      width: auto;    
+    }
+    & > div{
+      @media (max-width: $phone - 1) {
+        display: inline-flex;
+        margin-bottom: 10px;  
+        align-items: center;  
+      }
+    }  
   }
+
   & .presentation-event {
     display: flex;
     justify-content: center;
@@ -243,12 +271,12 @@ a.link {
       width: 30%;
       p{
         opacity: .8;
-        text-align: left;
+        text-align: left;  
 
-        em{ color: $BgColor; font-style: normal; }
+        em{ color: $BgColor; font-style: normal; font-weight: bold; }
 
         @media (min-width: $tablet) {
-          font-size: 1rem;
+          font-size: 1.1rem;
           line-height: 1.5rem;
         }
         @media (max-width: $phone - 1) {
@@ -265,7 +293,7 @@ a.link {
           width: 100%;
         p {
           padding: 0 0.2rem;
-          font-size: 1rem;
+          font-size: .7rem;
           text-align: center;
         }
       }
@@ -273,7 +301,6 @@ a.link {
         margin-bottom: 0;
       }
     }
-    .event:first-child{ margin-right: 2rem; }  
   }
 
   & .presentation-accroche {
@@ -281,10 +308,11 @@ a.link {
     h1{
       font-size: 2rem;
     }
-    @media (max-width: $tablet) {
+    @media (max-width: $tablet - 1) {
       padding: 4rem 2rem;
       h1 {
         margin: 0;
+        font-size: 1.3rem;  
       }
     }
   }
@@ -297,6 +325,7 @@ a.link {
   }
   p {
     color: $BgColorDark;
+    font-size: 1.1rem;  
   }
   ul {
     padding: 0;
@@ -343,8 +372,8 @@ a.link {
       }
 
       @media (min-width: $oldScreen) {
-        width: 200px;
-        height: 200px;
+        width: 180px;
+        height: 180px;
       }
       @media (max-width: $tablet - 1) {
         & span {
@@ -353,16 +382,20 @@ a.link {
       }
     }
   }
-  @media (max-width: $tablet) {
+  @media (max-width: $tablet - 1) {
     padding: 2rem;
     h1 {
       margin: 0 0 0.6rem 0;
+      font-size: 1.6rem;    
     }
     p {
       padding-bottom: 0.6rem;
+      font-size: .8rem;
+      line-height: 1.5rem;    
     }
   }
 }
+
 #quisommesnous {
   @extend %sectionSpace;
   background-color: $BgColorDark;
@@ -371,6 +404,7 @@ a.link {
     @include title($BgColorLight, 2rem);
   }
   p{
+    font-size: 1.1rem;  
     line-height: 1.8rem;
     width: 80%;
   }
@@ -378,16 +412,26 @@ a.link {
     width: 10%;
     margin: 2rem;
   }
-  @media (max-width: $tablet) {
-    padding: 4rem 2rem;
+  @media (max-width: $tablet - 1) {
+    padding: 2rem;
     h1 {
       margin: 0 0 1rem 0;
+      font-size: 1.6rem;    
     }
     p {
       width: 100%;
       padding: 0;
+      font-size: .8rem;   
+      line-height: 1.5rem;    
     }
-  }
+    img{
+      width: 20%;
+      @media (max-width: $phone - 1) {
+        width: 35%; 
+        margin: 1rem;  
+      }        
+    }  
+  } 
 }
 
 #participer {
@@ -396,27 +440,25 @@ a.link {
   h1 {
     @include title($BgColorLight, 2rem);
   }
+  p{
+    font-size: 1.1rem;  
+  }    
   .map-responsive {
-    overflow: hidden;
-    padding-bottom: 56.25%;
-    position: relative;
-    height: 0;
-    align-self: stretch;
+    width: 100%;
     filter: grayscale(100);
   }
-
   .map-responsive iframe {
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    position: absolute;
+    width: 80%;
   }
-  @media (max-width: $tablet) {
-    padding: 4rem 2rem;
+  @media (max-width: $tablet - 1) {
+    padding: 2rem;      
     h1 {
       margin: 0;
+      font-size: 1.6rem;    
     }
+    p{
+        font-size: .8rem;
+    }  
     a, a:hover {
       text-decoration: none;
       color: #FFF;
@@ -441,11 +483,24 @@ a.link {
     color: $textColor;
     font-weight: bold;
     padding: 15px;
+    margin-top: 10px;
+    font-size: 1.2em;  
     &:hover {
       background-color: $textColor;
       color: $BgColor;
     }
   }
+  @media (max-width: $tablet - 1) {
+    padding: 2rem;      
+    h1 {
+      font-size: 1.6rem;
+      margin-bottom: 0;    
+    }        
+    p{
+      font-size: 1rem;
+      line-height: 1.5rem;        
+    }  
+  }  
 }
 
 /**
