feature(indexSlicing) : do not forget to merge upstream before modifications !

--- a/src/partials/quisommesnous.html
+++ b/src/partials/quisommesnous.html
@@ -2,11 +2,11 @@
     <h1>L'équipe</h1>
     <p>Le comité Touraine Tech de l’association PALO ALTOURS, est constitué de membres actifs de la communauté tech de Tours métropole et sa région . Ils sont par ailleurs engagés dans les formations bénévoles, ateliers techniques et évènements du numérique : Tours JS, Tours JUG, GDG Tours, les Ateliers du Web Design, Docker Tours...</p>
     <div class="ateliers">
-        <img src="../../img/paloaltours.png" alt="Logo de Palo Altours">
-        <img src="../../img/toursjs.jpg" alt="Logo du Tours JS">
-        <img src="../../img/docker.jpeg" alt="Logo dU Docker">
-        <img src="../../img/gdgtours.png" alt="Logo du GDG Tours">
-        <img src="../../img/Tours-Jug.png" alt="Logo du Tours Jug">
-        <img src="../../img/AWD.jpg" alt="Logo des Ateliers du Web Design">
+        <a target="_blank" href="https://paloaltours.org/"><img src="../img/paloaltours.jpg" alt="Logo de Palo Altours"></a>
+        <a target="_blank" href="https://paloaltours.org/actions/toursjs/"><img src="../img/toursjs.jpg" alt="Logo du Tours JS"></a>
+        <a target="_blank" href="https://www.meetup.com/fr-FR/Docker-Tours/"><img src="../img/docker.jpeg" alt="Logo dU Docker"></a>
+        <a target="_blank" href="https://www.meetup.com/fr-FR/GDG-Tours/"><img src="../img/gdgtours.png" alt="Logo du GDG Tours"></a>
+        <a target="_blank" href="http://www.toursjug.org/"><img src="../img/Tours-Jug.png" alt="Logo du Tours Jug"></a>
+        <a target="_blank" href="https://paloaltours.org/actions/les-ateliers-du-web-design/"><img src="../img/AWD.jpg" alt="Logo des Ateliers du Web Design"></a>
     </div>
 </section>
