--- a/src/partials/participer.html
+++ b/src/partials/participer.html
@@ -3,7 +3,8 @@
     <div class="inscriptions">
         <p>Les inscriptions ne sont pas encore ouvertes.</p>
         <p>
-            <a href="https://twitter.com/tourainetech" target="_BLANK">Tenez-vous au jus sur twitter !</a>
+            <a href="https://twitter.com/tourainetech" target="_BLANK"><img src="../../img/twitter_logo_link.png" alt="Twitter" class="logo_link">Tenez-vous au jus sur twitter</a>
+            ou <a href="https://www.facebook.com/tourainetech/" target="_BLANK"><img src="../../img/facebook_link_logo.png" alt="Twitter" class="logo_link">sur Facebook !</a>
         </p>
         <p>
             Prochain <span itemprop="name">Touraine Tech</span>
