--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -2,7 +2,7 @@
     <meta name="google-site-verification" content="aloBwm93e88RJEH5XUhpIl9yuBphazWNYt6Al0PR7cM">
     <meta charset="UTF-8">
     <meta property="og:url" content="https://touraine.tech/">
-    <meta property="og:image" content="${require('!!file-loader?publicPath=https://touraine.tech/!../img/logo_tnt.png')}"/>
+    <meta property="og:image" content="${require('!!file-loader?publicPath=https://touraine.tech/!../../img/logo_tnt.png')}"/>
     <meta property="og:type" content="website">
     <meta property="og:title" content="Touraine Tech">
     <meta property="og:description" content="La première conférence technique en région centre sur les nouvelles technologies du numérique">
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="La première conférence technique en région centre sur les nouvelles technologies du numérique">
     <meta name="keywords" content="conférence, tours, tech, développement, design, ux, ui, jeu, conception, webdesign, software">
-    <link rel="icon" type="image/png" href="${require('!!file-loader?publicPath=https://touraine.tech/!../img/logo_tnt.png')}" />
+    <link rel="icon" type="image/png" href="${require('!!file-loader?publicPath=https://touraine.tech/!../../img/logo_tnt.png')}" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,400i,500,600,700" rel="stylesheet">
     <title>Touraine Tech</title>
 </head>
